--- a/.gitignore
+++ b/.gitignore
@@ -5,41 +5,52 @@
 *.swp
 .DS_Store
 .atom/
-.build/
 .buildlog/
 .history
 .svn/
-.swiftpm/
-migrate_working_dir/
+build/
+coverage/
+dist/
 
-# IntelliJ related
+# IntelliJ
+.idea/
 *.iml
 *.ipr
 *.iws
-.idea/
+out/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
+# Flutter
+.metadata
+.packages
+.flutter-plugins
 .flutter-plugins-dependencies
-.pub-cache/
+flutter_*.log
+
+# Dart
+.dart_tool/
 .pub/
+.pub-cache/
+
+# Build
+app/build/
 /build/
-/coverage/
 
-# Symbolication related
-app.*.symbols
+# Android
+/android/app/src/main/assets/flutter_assets/
+/android/key.properties
 
-# Obfuscation related
-app.*.map.json
+# iOS
+/ios/Flutter/App.framework
+/ios/Flutter/flutter_assets/
+/ios/Flutter/Generated.xcconfig
+/ios/Runner/GeneratedPluginRegistrant.h
+/ios/Runner/GeneratedPluginRegistrant.m
+/ios/Runner.xcworkspace/contents.xcworkspacedata
+/ios/Runner.xcworkspace/xcshareddata/
+/ios/Runner.xcodeproj/project.xcworkspace/
+/ios/Runner.xcodeproj/xcshareddata/
+/ios/Pods/
+/ios/.symlinks/
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Ignore generated localization files
+lib/generated/
