--- a/.gitignore
+++ b/.gitignore
@@ -5,52 +5,41 @@
 *.swp
 .DS_Store
 .atom/
+.build/
 .buildlog/
 .history
 .svn/
-build/
-coverage/
-dist/
+.swiftpm/
+migrate_working_dir/
 
-# IntelliJ
-.idea/
+# IntelliJ related
 *.iml
 *.ipr
 *.iws
-out/
+.idea/
 
-# Flutter
-.metadata
-.packages
-.flutter-plugins
-.flutter-plugins-dependencies
-flutter_*.log
+# The .vscode folder contains launch configuration and tasks you configure in
+# VS Code which you may wish to be included in version control, so this line
+# is commented out by default.
+#.vscode/
 
-# Dart
+# Flutter/Dart/Pub related
+**/doc/api/
+**/ios/Flutter/.last_build_id
 .dart_tool/
-.pub/
+.flutter-plugins-dependencies
 .pub-cache/
-
-# Build
-app/build/
+.pub/
 /build/
+/coverage/
 
-# Android
-/android/app/src/main/assets/flutter_assets/
-/android/key.properties
+# Symbolication related
+app.*.symbols
 
-# iOS
-/ios/Flutter/App.framework
-/ios/Flutter/flutter_assets/
-/ios/Flutter/Generated.xcconfig
-/ios/Runner/GeneratedPluginRegistrant.h
-/ios/Runner/GeneratedPluginRegistrant.m
-/ios/Runner.xcworkspace/contents.xcworkspacedata
-/ios/Runner.xcworkspace/xcshareddata/
-/ios/Runner.xcodeproj/project.xcworkspace/
-/ios/Runner.xcodeproj/xcshareddata/
-/ios/Pods/
-/ios/.symlinks/
+# Obfuscation related
+app.*.map.json
 
-# Ignore generated localization files
-lib/generated/
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
